--- a/packages/Makefile.am
+++ b/packages/Makefile.am
@@ -1,8 +1,6 @@
 designpackagesdir = $(datadir)/colorhug-hardware/packages
 designpackages_DATA =					\
-	crystal-hc49us.fp				\
-	HC49smt.fp					\
-	USB_mini_TYPE-B_SMT_truncated.fp
+	usb-a-pcb.fp
 
 EXTRA_DIST = ${designpackages_DATA}
 
